# KDE-CDEmu

./: CMakeLists.txt  ChangeLog  ChangeLog.md  README.md
po/: de.po  es.po  kde_cdemu.pot  pl.po  ro.po  ru.po  sv.po  zh_CN.po
src/: CMakeLists.txt  cdemu.cpp  cdemu.h  kde_cdemu.desktop  kde_cdemu_mount.desktop  kde_cdemuui.rc  kdecdemu.cpp  kdecdemu.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.cpp  messagebox.h
